--- a/preload-script.html
+++ b/preload-script.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <link href="https://unpkg.com/gojs/release/go.js" rel="preload" as="script" />
+  <link href="https://unpkg.com/gojs@2.1.32/release/go.js" rel="preload" as="script" />
 </head>
 
 <body>
