--- a/load-script.html
+++ b/load-script.html
@@ -5,7 +5,10 @@
 </head>
 
 <body>
-  HTML won't be blocked by the loading of go.js
+  Hello world!
+  <script>
+    console.log("go.js block this message");
+  </script>
 </body>
 
 </html>
