--- a/preload-script.html
+++ b/preload-script.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-  HTML won't be blocked by the loading of go.js
+  <p>HTML won't be blocked by the loading of go.js</p>
+  <p>go.js won't be evaluated</p>
 </body>
 
 </html>
