--- a/preload-script.html
+++ b/preload-script.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <link href="go3.js" rel="prefetch" as="script" />
   <link href="go.js" rel="preload" as="script" />
   <script src="go2.js"></script>
 </head>
